--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,10 @@
     "type": "library",
     "require": {
         "guzzlehttp/guzzle": "^7.8",
-        "firebase/php-jwt": "^6.10"
+        "firebase/php-jwt": "^6.10",
+        "doctrine/orm": "^3.2",
+        "doctrine/dbal": "^4.0",
+        "symfony/cache": "^7.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^11.1"
