--- a/composer.json
+++ b/composer.json
@@ -22,5 +22,9 @@
             "name": "abdelrhman-saeed",
             "email": "abdelrhmansaeed001@gmail.com"
         }
+    ],
+
+    "bin": [
+        "auth"
     ]
 }
